--- a/web/style.css
+++ b/web/style.css
@@ -1,8 +1,5 @@
-/* html{
-    padding: 2%;
-    margin: 2%;
-} */
-.main_container,.txn,.txn_{
+
+.main_container,.txn,.txn_,.add_data{
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -14,7 +11,10 @@
     margin-bottom: 3%;
 }
 .txn_{
-    margin-bottom: 2%;
+    margin-bottom: 2% !important;
+}
+input, .txn_head{
+    margin-bottom: 10% !important;
 }
 .container-fluid{
     justify-content: center !important;
@@ -34,4 +34,7 @@
 }
 #data_content{
     margin-top: 2%;
+}
+.add_data{
+    flex-direction: row !important;
 }
